updated to use new css path

--- a/examples/gridPage.html
+++ b/examples/gridPage.html
@@ -5,7 +5,7 @@
 <title>Cujo Grid Example</title>
 
 <!-- TODO: replace these with cujo.requireCss() -->
-<link rel="stylesheet" type="text/css" href="../theme/css/headline.css"/>
+<link rel="stylesheet" type="text/css" href="../templates/headline.css"/>
 <link rel="stylesheet" type="text/css" href="gridView.css"/>
 <link rel="stylesheet" type="text/css" href="theme1.css"/>
 
