--- a/tests/ie6SelectorTests.html
+++ b/tests/ie6SelectorTests.html
@@ -34,7 +34,7 @@ function load (resp) {
 
     console.log('start testing');
 
-    cujo.cssProc.processCss(resp);
+    cujo.cssx.processCss(resp);
 
 //    console.assert(tCount == totalTests, 'Some tests did not run or the test count is wrong. ' + tCount + ' tests ran, but ' + totalTests + ' were expected.');
 
