--- a/tests/ie6layoutTests.html
+++ b/tests/ie6layoutTests.html
@@ -33,7 +33,7 @@ function load (resp) {
     console.log('start testing');
 
     // temp:
-    cujo.cssProc.processCss(resp);
+    cujo.cssx.processCss(resp);
 
     console.log('end testing');
 }
