--- a/tests/all.html
+++ b/tests/all.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Run all Unit Tests</title>
-	 <meta http-equiv="REFRESH" content="0;url=../../util/doh/runner.html?testModule=tests.cujo.all&registerModulePath=tests,../tests">
+	 <meta http-equiv="REFRESH" content="0;url=../util/doh/runner.html?testModule=tests.cujo.all&registerModulePath=tests,../tests">
 </head>
 <body>
 	
