--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>unscriptable/cujo.js @ GitHub</title>
+	<title>unscriptable/cujo @ GitHub</title>
 	
 	<style type="text/css">
 		body {
@@ -34,7 +33,7 @@
 </head>
 
 <body>
-  <a href="http://github.com/unscriptable/cujo.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <a href="http://github.com/unscriptable/cujo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
 
@@ -45,7 +44,7 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/unscriptable/cujo.js">cujo.js</a>
+    <h1><a href="http://github.com/unscriptable/cujo">cujo.js</a>
       <span class="small">by <a href="http://github.com/unscriptable">unscriptable</a></span></h1>
 
     <div class="description">
@@ -53,9 +52,12 @@
     </div>
 
     <h2>Authors</h2>
-<p>Brian Cavalier <br/>unscriptable <br/><br/><br/>      </p>
+<p>Brian Cavalier (<a href="http://twitter.com/briancavalier">@briancavalier</a>)
+<br/>John Hann (<a href="http://twitter.com/unscriptable">unscriptable</a>)
+<br/>      </p>
 <h2>Contact</h2>
-<p>John Hann (@unscriptable)<br/>      </p>
+<p>John Hann (<a href="http://twitter.com/unscriptable">unscriptable</a>)
+<br/>      </p>
 
 
     <h2>Download</h2>
@@ -66,11 +68,11 @@
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
-      <pre>$ git clone git://github.com/unscriptable/cujo.js</pre>
+      <pre>$ git clone git://github.com/unscriptable/cujo</pre>
     </p>
 
     <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/unscriptable/cujo.js">unscriptable/cujo.js</a>
+      get the source code on GitHub : <a href="http://github.com/unscriptable/cujo">unscriptable/cujo</a>
     </div>
 
   </div>
