--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 	<title>unscriptable/cujo @ GitHub</title>
-	
+
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
@@ -29,7 +29,7 @@
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
 	</style>
-	
+
 </head>
 
 <body>
@@ -38,9 +38,9 @@
   <div id="container">
 
     <div class="download">
-      <a href="http://github.com/unscriptable/cujo.js/zipball/master">
+      <a href="http://github.com/unscriptable/cujo/zipball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/unscriptable/cujo.js/tarball/master">
+      <a href="http://github.com/unscriptable/cujo/tarball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
@@ -53,22 +53,22 @@
 
     <h2>Authors</h2>
 <p>Brian Cavalier (<a href="http://twitter.com/briancavalier">@briancavalier</a>)
-<br/>John Hann (<a href="http://twitter.com/unscriptable">unscriptable</a>)
+<br/>John Hann (<a href="http://twitter.com/unscriptable">@unscriptable</a>)
 <br/>      </p>
 <h2>Contact</h2>
-<p>John Hann (<a href="http://twitter.com/unscriptable">unscriptable</a>)
+<p>John Hann (<a href="http://twitter.com/unscriptable">@unscriptable</a>)
 <br/>      </p>
 
 
     <h2>Download</h2>
     <p>
       You can download this project in either
-      <a href="http://github.com/unscriptable/cujo.js/zipball/master">zip</a> or
-      <a href="http://github.com/unscriptable/cujo.js/tarball/master">tar</a> formats.
+      <a href="http://github.com/unscriptable/cujo/zipball/master">zip</a> or
+      <a href="http://github.com/unscriptable/cujo/tarball/master">tar</a> formats.
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
-      <pre>$ git clone git://github.com/unscriptable/cujo</pre>
+      <pre>$ git clone git://github.com/unscriptable/cujo.js</pre>
     </p>
 
     <div class="footer">
@@ -77,6 +77,6 @@
 
   </div>
 
-  
+
 </body>
 </html>
