--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/unscriptable/cujo">cujo.js</a>
-      <span class="small">by <a href="http://github.com/unscriptable">unscriptable</a></span></h1>
+    <h1><a href="http://github.com/unscriptable/cujo">cujo.js</a></h1>
 
     <div class="description">
       cujo.js platform
