fixed git clone url

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
-      <pre>$ git clone git://github.com/unscriptable/cujo.js</pre>
+      <pre>$ git clone git://github.com/unscriptable/cujo</pre>
     </p>
 
     <div class="footer">
