no more puke and pink

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #077e50;
+  		background-color: #345;
 		  font-family: "Helvetica,Arial,FreeSans";
   		color: #ffffff;
     }
@@ -20,9 +20,9 @@
 		h1 { font-size: 3.8em; color: #f881af; margin-bottom: 3px; }
 		h1 .small { font-size: 0.4em; }
 		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #f881af; }
-    h3 { text-align: center; color: #f881af; }
-    a { color: #f881af; }
+		h2 { font-size: 1.5em; color: #2faced; }
+    h3 { text-align: center; color: #2faced; }
+    a { color: #2faced; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
 		pre { background: #000; color: #fff; padding: 15px;}
@@ -70,6 +70,9 @@
       <pre>$ git clone git://github.com/unscriptable/cujo</pre>
     </p>
 
+      <p>
+          colors changed from <span style="padding: 0px 3px; color: #F881AF; background-color: #077E50; display: inline; zoom: 1; display: inline-block;">puke and pink</span> by order of phiggins, <a href="http://a1.twimg.com/profile_images/57589677/dante.png">future President of the United States</a>, maker of the <a href="http://github.com/phiggins42/has.js">new hawtness</a>, and official project lead for <a href="http://dojotoolkit.org/">the dojo toolkit</a>. 
+      </p>
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/unscriptable/cujo">unscriptable/cujo</a>
     </div>
