--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </p>
 
       <p>
-          colors changed from <span style="padding: 0px 3px; color: #F881AF; background-color: #077E50; display: inline; zoom: 1; display: inline-block;">puke and pink</span> by order of phiggins, <a href="http://a1.twimg.com/profile_images/57589677/dante.png">future President of the United States</a>, maker of the <a href="http://github.com/phiggins42/has.js">new hawtness</a>, and official project lead for <a href="http://dojotoolkit.org/">the dojo toolkit</a>. 
+          Colors changed from <span style="padding: 0px 3px; color: #F881AF; background-color: #077E50; display: inline; zoom: 1; display: inline-block;">puke and pink</span> by order of phiggins, <a href="http://a1.twimg.com/profile_images/57589677/dante.png">future President of the United States</a>. 
       </p>
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/unscriptable/cujo">unscriptable/cujo</a>
