--- a/index.html
+++ b/index.html
@@ -50,31 +50,38 @@
       cujo.js platform
     </div>
 
-    <h2>Authors</h2>
-<p>Brian Cavalier (<a href="http://twitter.com/briancavalier">@briancavalier</a>)
-<br/>John Hann (<a href="http://twitter.com/unscriptable">@unscriptable</a>)
-<br/>      </p>
-<h2>Contact</h2>
-<p>John Hann (<a href="http://twitter.com/unscriptable">@unscriptable</a>)
-<br/>      </p>
 
+      <h2>Browse</h2>
+      <ul>
+          <li>Start with an <a href="http://github.com/unscriptable/cujo/wiki">introduction</a></li>
+          <li>Learn more on the <a href="http://github.com/unscriptable/cujo/wiki">wiki</a></li>
+          <li>Grok it by viewing the <a href="http://github.com/unscriptable/cujo">source code</a></li>
+      </ul>
 
-    <h2>Download</h2>
+      <h2>Download</h2>
     <p>
       You can download this project in either
       <a href="http://github.com/unscriptable/cujo/zipball/master">zip</a> or
       <a href="http://github.com/unscriptable/cujo/tarball/master">tar</a> formats.
     </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
+    <p>You can also clone the project <em>(preferred)</em> with <a href="http://git-scm.com">Git</a>
       by running:
       <pre>$ git clone git://github.com/unscriptable/cujo</pre>
     </p>
 
+      <h2>Authors</h2>
+  <p>Brian Cavalier (<a href="http://twitter.com/briancavalier">@briancavalier</a>)
+  <br/>John Hann (<a href="http://twitter.com/unscriptable">@unscriptable</a>)
+  <br/>      </p>
+
       <p>
-          Colors changed from <span style="padding: 0px 3px; color: #F881AF; background-color: #077E50; display: inline; zoom: 1; display: inline-block;">puke and pink</span> by order of phiggins, <a href="http://a1.twimg.com/profile_images/57589677/dante.png">future President of the United States</a>. 
+          Colors changed from <span style="font-weight: bold; padding: 0px 3px; color: #F881AF; background-color: #077E50; display: inline; zoom: 1; display: inline-block;">puke and pink</span> by order of phiggins, <a href="http://a1.twimg.com/profile_images/57589677/dante.png">future President of the United States</a>. 
+      </p>
+      <p>
+          "Release early and release often, right?" "Yeah, this is definitely early, anyways."
       </p>
     <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/unscriptable/cujo">unscriptable/cujo</a>
+      Get the source code on GitHub : <a href="http://github.com/unscriptable/cujo">unscriptable/cujo</a>
     </div>
 
   </div>
