--- a/examples/digital-clock/index.html
+++ b/examples/digital-clock/index.html
@@ -39,7 +39,7 @@ http://www.opensource.org/licenses/afl-3.0.php
 
 
 	<script type="text/javascript">
-		require(['cujo/cujo', 'clock/ClockView'], function() {
+		require(['cujo', 'clock/ClockView'], function() {
 			require.ready(function() {
 				dojo.parser.parse();
 			})
