--- a/cujo/widget/grid/TextGrid.html
+++ b/cujo/widget/grid/TextGrid.html
@@ -1,4 +1,4 @@
-<div class="cujo-stretch cujo-headline-c cujo-grid cujo-textgrid">
+<div class="cujo-stretch cujo-headline-c cujo-grid">
 	<div class="cujo-header">
 		<table class="cujo-grid-table"><thead data-dojo-attach-point="headerRowsContainer"></thead></table>
 	</div>
