added temporary support for accommodating scrollbar dimensions until cssx is ready.

--- a/cujo/widget/grid/TextGrid.html
+++ b/cujo/widget/grid/TextGrid.html
@@ -1,11 +1,13 @@
 <div class="cujo-stretch cujo-headline-c cujo-grid">
 	<div class="cujo-header">
 		<table class="cujo-grid-table"><thead data-dojo-attach-point="headerRowsContainer"></thead></table>
+		<div class="cujo-grid-scrollspace" data-dojo-attach-point="headerScrollspace"></div>
 	</div>
 	<div class="cujo-body">
 		<table class="cujo-grid-table"><tbody data-dojo-attach-point="bodyRowsContainer"></tbody></table>
 	</div>
 	<div class="cujo-footer" data-dojo-attach-point="footerNode">
 		<table class="cujo-grid-table"><tfoot data-dojo-attach-point="footerRowsContainer"></tfoot></table>
+		<div class="cujo-grid-scrollspace" data-dojo-attach-point="footerScrollspace"></div>
 	</div>
 </div>
