--- a/tests/cujo/widget/grid/TextGrid.html
+++ b/tests/cujo/widget/grid/TextGrid.html
@@ -11,10 +11,10 @@
 		var
 			baseUrl = '../../../../',
 			paths = {
-				'dojo': 'dojo',
-				'dijit': 'dijit',
-				'cujo': 'cujo',
-				'require': 'require'
+				'dojo': 'dojo/',
+				'dijit': 'dijit/',
+				'cujo': 'cujo/',
+				'curl': 'curl/'
 			};
 
 		djConfig = {
@@ -34,58 +34,64 @@
 </script>
 
 <!-- the following two files are needed for unit tests -->
-<script src="../../../../util/doh/runner.js"></script>
-<script src="../../../../util/doh/_browserRunner.js"></script>
-<script src="../../../../require.js" type="text/javascript"></script>
+<!--<script src="../../../../util/doh/runner.js"></script>-->
+<!--<script src="../../../../util/doh/_browserRunner.js"></script>-->
+<script src="../../../../curl.js" type="text/javascript"></script>
 <script src="../../../../dojo.js" type="text/javascript"></script>
-<script src="../../../../cujo.js" type="text/javascript"></script>
+<!--<script src="../../../../dijit/dijit.js" type="text/javascript"></script>-->
+<!--<script src="../../../../cujo.js" type="text/javascript"></script>-->
 
 <script type="text/javascript">
 
-	require(['cujo/widget/grid/TextGrid', 'dijit']);
+	require(['cujo/widget/grid/TextGrid'], function (TextGrid) {
 
-	require.ready(function () {
-		/* testing code */
-		dojo.parser.parse();
-		var
-			grid = dijit.byId('grid1'),
-			dataSet1 = [
-				{ id: 1, selected: false, fileName: 'file/me/under/please-just-work.hope' },
-				{ id: 2, selected: false, fileName: 'whats/up.doc' }
-			],
-			dataSet2 = [
-				{ id: 3, selected: true, fileName: 'foo/bar.html', checked: 'checked' },
-				{ id: 4, selected: false, fileName: 'whats/up2.doc' },
-				{ id: 27, selected: false, fileName: 'this.html' }
-			],
-			colDefs1 = {
-				selected: {
-					name: 'selected',
-					title: '',
-					colClass: 'test-class'
+		require.ready(function () {
+			/* testing code */
+			dojo.parser.parse();
+			var
+				grid = dijit.byId('grid1'),
+				dataSet1 = [
+					{ id: 1, selected: false, fileName: 'file/me/under/please-just-work.hope' },
+					{ id: 2, selected: false, fileName: 'whats/up.doc' }
+				],
+				dataSet2 = [
+					{ id: 3, selected: true, fileName: 'foo/bar.html', checked: 'checked' },
+					{ id: 4, selected: false, fileName: 'whats/up2.doc' },
+					{ id: 27, selected: false, fileName: 'this.html' }
+				],
+				colDefs1 = {
+					selected: {
+						name: 'selected',
+						title: '',
+						colClass: 'test-class'
+					},
+					fileName: { name: 'fileName', title: 'Wahtzit' }
 				},
-				fileName: { name: 'fileName', title: 'Wahtzit' }
-			},
-			colDefs2 = {
-				selected: {
-					name: 'selected',
-					title: '',
-					colClass: 'test-class',
-					bodyCellTemplate: '<td class="my-custom-class"><input type="checkbox" ${checked}/> check</td>',
-					headerCellTemplate: '<th${colClassAttr}><input type="checkbox" ${checked}/> check</th>',
-					footerCellTemplate: '<td${colClassAttr}><input type="checkbox" ${checked}/> check</td>'
-				},
-				fileName: { name: 'fileName', title: 'File Name' }
+				colDefs2 = {
+					selected: {
+						name: 'selected',
+						title: '',
+						colClass: 'test-class',
+						bodyCellTemplate: '<td class="my-custom-class"><input type="checkbox" ${checked}/> check</td>',
+						headerCellTemplate: '<th${colClassAttr}><input type="checkbox" ${checked}/> check</th>',
+						footerCellTemplate: '<td${colClassAttr}><input type="checkbox" ${checked}/> check</td>'
+					},
+					fileName: { name: 'fileName', title: 'File Name' }
+				};
+			grid.onRowClick = function (row, dataItem, e) {
+				console.log('row clicked:', row, dataItem, e);
 			};
-		grid.set('colDefs', colDefs1);
-		// TODO: make checked a derived property using cujo._Derivable
-		grid.set('dataSet', dataSet1);
-		setTimeout(function () {
-			grid.set('dataSet', dataSet2);
-		}, 1000);
-		setTimeout(function () {
-			grid.set('colDefs', colDefs2);
-		}, 2000);
+			grid.set('colDefs', colDefs1);
+			// TODO: make checked a derived property using cujo._Derivable
+			grid.set('dataSet', dataSet1);
+			setTimeout(function () {
+				grid.set('dataSet', dataSet2);
+			}, 1000);
+			setTimeout(function () {
+				grid.set('colDefs', colDefs2);
+			}, 2000);
+		});
+
 	});
 
 </script>
