grid now has a containerNode, making it compatible with _BindableContainer

--- a/cujo/widget/grid/TextGrid.html
+++ b/cujo/widget/grid/TextGrid.html
@@ -4,7 +4,7 @@
 		<div class="cujo-grid-scrollspace" data-dojo-attach-point="headerScrollspace"></div>
 	</div>
 	<div class="cujo-body">
-		<table class="cujo-grid-table"><tbody data-dojo-attach-point="bodyRowsContainer"></tbody></table>
+		<table class="cujo-grid-table"><tbody data-dojo-attach-point="bodyRowsContainer,containerNode"></tbody></table>
 	</div>
 	<div class="cujo-footer" data-dojo-attach-point="footerNode">
 		<table class="cujo-grid-table"><tfoot data-dojo-attach-point="footerRowsContainer"></tfoot></table>
